--- a/responsive.html
+++ b/responsive.html
@@ -1,21 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>responsive</title>
-     <link rel="stylesheet" href="styles/responsive.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Responsive School Website</title>
+    <link rel="stylesheet" href="styles/responsive.css">
 </head>
 <body>
-     <header>
+    <header>
+        <nav class="navbar">
+            <div class="logo">
+                <img src="assets/logo.png" alt="School Logo" class="logo-img">
+                <h3 class="brand">SCHOOL</h3>
+            </div>
+            <ul class="nav-links">
+                <li class="nav-item"><a href="#" class="nav-link home"style="color: orange">Home</a></li>
+                <li class="nav-item"><a href="#" class="nav-link about"style="color: skyblue">About</a></li>
+                <li class="nav-item"><a href="#" class="nav-link facilities"style="color: rgba(5, 212, 223, 1)">Facilities</a></li>
+                <li class="nav-item"><a href="#" class="nav-link admission"style="color: rgba(93, 88, 239, 1)">Admission</a></li>
+            </ul>
+            <button class="btn-primary">Contact</button>
+            <div class="menu-toggle">&#9776;</div>
+        </nav>
 
-     </header>
-     <main>
+        <section class="banner">
+          <div class="banner-content">
+              <h1 class="banner-title">
+                  <span class="dark">Empowering</span><br>
+                  students from small <br>age <span class="dark-2">towards vision</span>
+              </h1>
+              <p class="banner-description">
+                  With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.
+              </p>
+              <button class="btn-primary-1">Enroll Now</button>
+          </div>
+          <div class="banner-img">
+              <img src="assets/hero-kids.png" alt="Kids" class="banner-image">
+          </div>
+      </section>
+      
+    </header>
 
-     </main>
-     <footer>
+    <!-- main style -->
 
-     </footer>
+    <main class="main">
+        <h1 class="banner-title-2">Standard Curriculum</h1>
+        <div class="container">
+            <div class="card">
+                <img src="assets/kinder.png" alt="Kinder" class="card-img">
+                <h2 class="h2">Kinder (3-6) Years</h2>
+                <p class="pra">Basic introductory education for young learners.</p>
+                <button class="btn-primary-2">Read More</button>
+            </div>
+            <div class="card">
+                <img src="assets/elementary.png" alt="Elementary" class="card-img">
+                <h2 class="h2">Elementary (6-10) Years</h2>
+                <p class="pra">Comprehensive learning program for foundational knowledge.</p>
+                <button class="btn-primary-3">Read More</button>
+            </div>
+            <div class="card">
+                <img src="assets/middle.png" alt="Middle" class="card-img">
+                <h2 class="h2">Middle (10-16) Years</h2>
+                <p class="pra">Advanced subjects and skill development for teenagers.</p>
+                <button class="btn-primary-4">Read More</button>
+            </div>
+        </div>
+    </main>
+           <!-- our stories style -->
+    <section class="our-stories">
+      <h1 class="section-title">Our Stories</h1>
+      <div class="stories-container">
+
+         <div class="big-story">
+             <img src="assets/story-1.png" alt="Story 1" class="big-story-img">
+             <div class="big-story-content">
+                 <button class="date-badge blue">November 19, 2019</button>
+                 <h2>A fun toddler coloring training on classroom</h2>
+                 <p>Beautiful branding for changes by Never Now in Australia...</p>
+             </div>
+         </div>
+ 
      
+         <div class="small-stories">
+             <div class="small-story">
+                 <img src="assets/story-2.png" alt="Story 2" class="small-story-img">
+                 <button class="date-badge green">November 20, 2019</button>
+                 <h2>Find out if a school fits the family’s needs</h2>
+             </div>
+             <div class="small-story">
+                 <img src="assets/story-3.png" alt="Story 3" class="small-story-img">
+                 <button class="date-badge red">November 21, 2019</button>
+                 <h2>Our students achieve excellent results</h2>
+             </div>
+             <div class="small-story">
+                 <img src="assets/story-4.png" alt="Story 4" class="small-story-img">
+                 <button class="date-badge orange">November 22, 2019</button>
+                 <h2>New learning techniques in classrooms</h2>
+             </div>
+             <div class="small-story">
+                 <img src="assets/story-5.png" alt="Story 5" class="small-story-img">
+                 <button class="date-badge purple">November 23, 2019</button>
+                 <h2>Outdoor learning activities for kids</h2>
+             </div>
+         </div>
+     </div>
+ </section>
+
+         <!-- footer style -->
+ <footer class="footer">
+     <div class="footer-content">
+         <div class="footer-box">
+             <div style="display: flex; gap: 10px;">
+                 <img src="assets/logo.png" alt="">
+                 <h1>Kids Education</h1>
+             </div>
+             <p>Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.</p>
+         </div>
+         <div class="footer-box footer-about">
+             <h2>About School</h2>
+             <ul class="footer-link">
+                 <li class="footer-item"><a href="">Home</a></li>
+                 <li class="footer-item"><a href="">About</a></li>
+                 <li class="footer-item"><a href="">Facilities</a></li>
+                 <li class="footer-item"><a href="">Admission</a></li>
+             </ul>
+         </div>
+         <div class="footer-box footer-div">
+             <h2>Keep In Touch</h2>
+             <img class="img" src="assets/fb.png" alt="Facebook">
+             <img class="img" src="assets/dribble.png" alt="Dribbble">
+             <img class="img" src="assets/twitter.png" alt="Twitter">
+             <img class="img" src="assets/google+.png" alt="Google+">
+         </div>
+     </div>
+ </footer>
+ 
+ 
+
+    <!-- <script>
+        document.querySelector('.menu-toggle').addEventListener('click', function() {
+            document.querySelector('.nav-links').classList.toggle('active');
+        });
+    </script> -->
 </body>
 </html>
