added script and responsive

--- a/responsive.html
+++ b/responsive.html
@@ -137,10 +137,10 @@
  
  
 
-    <!-- <script>
+     <script>
         document.querySelector('.menu-toggle').addEventListener('click', function() {
             document.querySelector('.nav-links').classList.toggle('active');
         });
-    </script> -->
+    </script> 
 </body>
 </html>
